--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.7.1",
+    "tsparticles-plugin-absorbers": "^2.12.0",
+    "tsparticles-plugin-emitters": "^2.12.0",
+    "tsparticles-plugin-polygon-mask": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
